--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Sample ebook (title)</title>
+    <title>Statistical Models: Theory and Applications</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -19,13 +19,13 @@
         <h1><a href="index.html">Sample ebook (title)</a></h1>
         <p></p>
 
-        <p class="view"><a href="https://github.com/kshaffer/GHbook">View the Project on GitHub <small>kshaffer/GHbook</small></a></p>
+        <p class="view"><a href="https://github.com/kshaffer/GHbook">View the Project on GitHub <small>rlbarter/Stat_Models_Book</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/kshaffer/GHbook/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/kshaffer/GHbook/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/kshaffer/GHbook">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/rlbarter/Stat_Models_Book/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/rlbarter/Stat_Models_Book/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/rlbarter/Stat_Models_Book">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
 
@@ -34,8 +34,8 @@
       </section>
   
       <footer>
-		<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />All contents on this site, unless otherwise stated, are copyright 2013 by (INSERT NAME) and licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
-        <p><small>This project is maintained by <a href="https://github.com/kshaffer">kshaffer</a></small></p>
+		<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />All contents on this site, unless otherwise stated, are copyright 2015 by (INSERT NAME) and licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
+        <p><small>This project is maintained by <a href="https://github.com/rlbarter">kshaffer</a></small></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
