--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="index.html">Sample ebook (title)</a></h1>
+        <h1><a href="index.html">Statistical Models: Theory and Applications</a></h1>
         <p></p>
 
         <p class="view"><a href="https://github.com/kshaffer/GHbook">View the Project on GitHub <small>rlbarter/Stat_Models_Book</small></a></p>
@@ -35,7 +35,7 @@
   
       <footer>
 		<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />All contents on this site, unless otherwise stated, are copyright 2015 by (INSERT NAME) and licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
-        <p><small>This project is maintained by <a href="https://github.com/rlbarter">kshaffer</a></small></p>
+        <p><small>This project is maintained by <a href="https://github.com/rlbarter">rlbarter</a></small></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
